# eset

string_finder/: .gitignore  CMakeLists.txt  README.md  main.cpp
string_finder/include/: BadMatchTable.h  File.h  MappedFile.h  MappedMemory.h  Occurrence.h  file.h  occurrence.h
string_finder/src/: BadMatchTable.cpp  File.cpp  MappedFile.cpp  MappedMemory.cpp  Occurrence.cpp  file.cpp  occurrence.cpp
string_finder/text/: text1.txt
string_finder/text/text_dir1/: text2.txt
string_finder/text/text_dir1/text_dir2/: text5.txt
string_finder/utils/: occurrence.cpp  occurrence.h
